2007-02-20  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/test_delete(fla, swf): added delete tester
	* gameswf/gameswf_classes/as_array(cpp,h): added to_string()
	for trace() & updated length property
	* gameswf/gameswf_action.cpp: The next attempt to fix the delete & delete2
	

2007-02-20  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/test_mysql.fla: compacted

2007-02-20  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/test_mysql(fla, swf): added mysql test
	* gameswf/gameswf_classes/as_db(cpp,h), as_table(h, cpp):
	added very simple, working and convenient MYSQL extension
	for the gameswf SWF player library.
	* gameswf/win32/VC8: added as_db(cpp,h) & as_table(h, cpp) files
	* gameswf/gameswf_action.cpp: The attempt to fix delete & delete2,
	added the call to mysql ctor
	* gameswf/gameswf_impl.cpp: simplified notify_keypress_listener(),
	Thanks Thatcher

2007-02-18  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp: There is begun process of allocation
	of action script classes in own files, fixed as_array
	* gameswf/gameswf_classes/as_array(cpp,h): moved as_array class stuff
	* gameswf/win32/VC8: added new files
	
2007-02-18  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl: a bit cleanup
	* gameswf/gameswf_impl.cpp: fixed memory leaks

2007-02-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl: added memory leaks tester

2007-02-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl: added SDL_VIDEORESIZE event handler
	* gameswf/gameswf_impl.cpp: a bit cleanup

2007-02-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_button.cpp: protect character from deleting
	during execution of event handler
	* gameswf/gameswf_test_ogl: added digits to key_event()
	* gameswf/gameswf_impl.cpp: added the addition check of type
	in	notify_keypress_listeners()
	* gameswf/gameswf_dlist.cpp: cleanuping


2007-02-17  Vitaly Alexeev <tishka92@yahoo.com>
